--- a/WOW P2/WOW P2.csproj
+++ b/WOW P2/WOW P2.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeighingController.cs" />
     <EmbeddedResource Include="frmLabels.resx">
       <DependentUpon>frmLabels.cs</DependentUpon>
     </EmbeddedResource>
