--- a/WOW P2/WOW P2.csproj
+++ b/WOW P2/WOW P2.csproj
@@ -59,21 +59,23 @@
     <Compile Include="frmLabels.Designer.cs">
       <DependentUpon>frmLabels.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrinterController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="WeighingController.cs" />
     <EmbeddedResource Include="frmLabels.resx">
       <DependentUpon>frmLabels.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -87,6 +89,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\upload_01.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bascule_01.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\printer_01.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
