--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D67C01B-AA27-4F25-B89D-3FDC55BA8A44}</ProjectGuid>
+    <ProjectGuid>{68B5FA7F-6410-4DBE-92E9-D9C64B01CE02}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WOW_P2</RootNamespace>
-    <AssemblyName>WOW P2</AssemblyName>
+    <RootNamespace>WOW_Fusion</RootNamespace>
+    <AssemblyName>WOW-Fusion</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -52,30 +52,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API.cs" />
-    <Compile Include="frmLabels.cs">
+    <Compile Include="APIController.cs" />
+    <Compile Include="frmLabelP1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmLabels.Designer.cs">
-      <DependentUpon>frmLabels.cs</DependentUpon>
+    <Compile Include="frmLabelP1.Designer.cs">
+      <DependentUpon>frmLabelP1.cs</DependentUpon>
     </Compile>
-    <Compile Include="PrinterController.cs" />
+    <Compile Include="frmLabelP2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLabelP2.Designer.cs">
+      <DependentUpon>frmLabelP2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="WeighingController.cs" />
-    <EmbeddedResource Include="frmLabels.resx">
-      <DependentUpon>frmLabels.cs</DependentUpon>
+    <Compile Include="RadwagController.cs" />
+    <Compile Include="ZebraController.cs" />
+    <EmbeddedResource Include="frmLabelP1.resx">
+      <DependentUpon>frmLabelP1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLabelP2.resx">
+      <DependentUpon>frmLabelP2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -91,13 +100,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\upload_01.png" />
+    <None Include="Resources\printer_01.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\bascule_01.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\printer_01.png" />
+    <None Include="Resources\upload_01.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
