--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -52,7 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIController.cs" />
+    <Compile Include="Services\APIService.cs" />
     <Compile Include="frmLabelP1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,11 +83,12 @@
     <Compile Include="frmSackP3.Designer.cs">
       <DependentUpon>frmSackP3.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoadingController.cs" />
+    <Compile Include="Controllers\LoadingController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RadwagController.cs" />
-    <Compile Include="ZebraController.cs" />
+    <Compile Include="Controllers\RadwagController.cs" />
+    <Compile Include="Controllers\ZebraController.cs" />
+    <Compile Include="Services\LabelService.cs" />
     <EmbeddedResource Include="frmLabelP1.resx">
       <DependentUpon>frmLabelP1.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,11 +108,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -138,6 +141,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\preloader_01.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\label_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\error_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\success_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
