--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WOW_Fusion.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -19,4 +24,29 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <WOW_Fusion.Properties.Settings>
+      <setting name="PrinterIP" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="PrinterPort" serializeAs="String">
+        <value>9100</value>
+      </setting>
+      <setting name="RadwagIP" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="RadwagPort" serializeAs="String">
+        <value>4001</value>
+      </setting>
+      <setting name="PathLabelsP1" serializeAs="String">
+        <value>D:\Visual Studio Projects\WOW-Fusion\WOW-Fusion\Resources\Labels\LP1</value>
+      </setting>
+      <setting name="PathLabelsP2" serializeAs="String">
+        <value>D:\Visual Studio Projects\WOW-Fusion\WOW-Fusion\Resources\Labels\LP2</value>
+      </setting>
+      <setting name="WorkCenterIdP2" serializeAs="String">
+        <value>300000003523428</value>
+      </setting>
+    </WOW_Fusion.Properties.Settings>
+  </userSettings>
 </configuration>
