Ajustes en tabla de pesos
Ok

--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -5,6 +5,7 @@
             <section name="WOW_Fusion.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings />
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -32,20 +33,32 @@
       <setting name="PrinterPort" serializeAs="String">
         <value>9100</value>
       </setting>
-      <setting name="RadwagIP" serializeAs="String">
-        <value>127.0.0.1</value>
-      </setting>
-      <setting name="RadwagPort" serializeAs="String">
+      <setting name="WeighingPort" serializeAs="String">
         <value>4001</value>
-      </setting>
-      <setting name="PathLabelsP1" serializeAs="String">
-        <value>D:\Visual Studio Projects\WOW-Fusion\WOW-Fusion\Resources\Labels\LP1</value>
-      </setting>
-      <setting name="PathLabelsP2" serializeAs="String">
-        <value>D:\Visual Studio Projects\WOW-Fusion\WOW-Fusion\Resources\Labels\LP2</value>
       </setting>
       <setting name="WorkCenterIdP2" serializeAs="String">
         <value>300000003523428</value>
+      </setting>
+      <setting name="Aditional" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="FusionUrl" serializeAs="String">
+        <value>https://iapxqy-test.fa.ocs.oraclecloud.com/fscmRestApi/resources/11.13.18.05</value>
+      </setting>
+      <setting name="ApexUrl" serializeAs="String">
+        <value>https://apex.oracle.com/pls/apex/mcaj/wo</value>
+      </setting>
+      <setting name="Credentials" serializeAs="String">
+        <value>ZmVsaXBlLmFudG9uaW9AaS1jb25kb3IuY29tOkNvbmRvclhSMTEy</value>
+      </setting>
+      <setting name="WeighingIP" serializeAs="String">
+        <value>192.168.12.1</value>
+      </setting>
+      <setting name="RollMax" serializeAs="String">
+        <value>40</value>
+      </setting>
+      <setting name="RollMin" serializeAs="String">
+        <value>20</value>
       </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
