Labels P2 UI NEW
OK

--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -36,9 +36,6 @@
       <setting name="WeighingPort" serializeAs="String">
         <value>4001</value>
       </setting>
-      <setting name="WorkCenterIdP2" serializeAs="String">
-        <value>300000003523428</value>
-      </setting>
       <setting name="Aditional" serializeAs="String">
         <value>5</value>
       </setting>
@@ -52,13 +49,16 @@
         <value>ZmVsaXBlLmFudG9uaW9AaS1jb25kb3IuY29tOkNvbmRvclhSMTEy</value>
       </setting>
       <setting name="WeighingIP" serializeAs="String">
-        <value>192.168.12.1</value>
+        <value>192.168.12.9</value>
       </setting>
       <setting name="RollMax" serializeAs="String">
         <value>40</value>
       </setting>
       <setting name="RollMin" serializeAs="String">
         <value>20</value>
+      </setting>
+      <setting name="WorkCenterP2" serializeAs="String">
+        <value>300000003523428</value>
       </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
