--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Google.Api.Gax, Version=4.3.1.0, Culture=neutral, PublicKeyToken=3ec5ea7f18953e47, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Api.Gax.4.3.1\lib\net462\Google.Api.Gax.dll</HintPath>
@@ -94,11 +97,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ConsoleController.cs" />
     <Compile Include="frmSettingsP1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmSettingsP1.Designer.cs">
       <DependentUpon>frmSettingsP1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmSettingsP2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSettingsP2.Designer.cs">
+      <DependentUpon>frmSettingsP2.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Constants.cs" />
     <Compile Include="Controllers\AppController.cs" />
@@ -162,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettingsP1.resx">
       <DependentUpon>frmSettingsP1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSettingsP2.resx">
+      <DependentUpon>frmSettingsP2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -233,6 +246,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\delete_02.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pallet_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\roll_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pallet_empty_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
