Pesaje de pallets
90%

--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -43,7 +43,7 @@
         <value>https://iapxqy-test.fa.ocs.oraclecloud.com/fscmRestApi/resources/11.13.18.05</value>
       </setting>
       <setting name="ApexUrl" serializeAs="String">
-        <value>https://apex.oracle.com/pls/apex/mcaj/wo</value>
+        <value>http://129.146.124.5:8080/ords/wow/wo</value>
       </setting>
       <setting name="Credentials" serializeAs="String">
         <value>ZmVsaXBlLmFudG9uaW9AaS1jb25kb3IuY29tOkNvbmRvclhSMTEy</value>
