--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -54,6 +54,12 @@
       <setting name="WorkCenterP2" serializeAs="String">
         <value>300000003523428</value>
       </setting>
+      <setting name="RollToPrint" serializeAs="String">
+        <value>2</value>
+      </setting>
+      <setting name="PalletToPrint" serializeAs="String">
+        <value>3</value>
+      </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
 </configuration>
