--- a/WOW-Fusion/WOW-Fusion.csproj
+++ b/WOW-Fusion/WOW-Fusion.csproj
@@ -133,11 +133,11 @@
     <Compile Include="Models\Batchs.cs" />
     <Compile Include="Models\Payloads.cs" />
     <Compile Include="Models\WorkOrderShedule.cs" />
-    <Compile Include="Views\Plant1\frmReprint.cs">
+    <Compile Include="Views\Plant1\frmLoginP1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Plant1\frmReprint.Designer.cs">
-      <DependentUpon>frmReprint.cs</DependentUpon>
+    <Compile Include="Views\Plant1\frmLoginP1.Designer.cs">
+      <DependentUpon>frmLoginP1.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Plant1\frmSettingsP1.cs">
       <SubType>Form</SubType>
@@ -205,8 +205,8 @@
     <EmbeddedResource Include="Views\Plant1\frmLabelP1.resx">
       <DependentUpon>frmLabelP1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Plant1\frmReprint.resx">
-      <DependentUpon>frmReprint.cs</DependentUpon>
+    <EmbeddedResource Include="Views\Plant1\frmLoginP1.resx">
+      <DependentUpon>frmLoginP1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Plant2\frmLabelP2.resx">
       <DependentUpon>frmLabelP2.cs</DependentUpon>
@@ -366,6 +366,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo_ico_wow.ico" />
+    <None Include="Resources\close_outline.png" />
+    <None Include="Resources\cerrar.png" />
     <None Include="Resources\empty.png" />
   </ItemGroup>
   <ItemGroup>
