Seleccion de centro por recurso de tipo maquina
Listo

--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -51,7 +51,7 @@
       <setting name="WeighingIP" serializeAs="String">
         <value>192.168.12.2</value>
       </setting>
-      <setting name="WorkCenterP2" serializeAs="String">
+      <setting name="WorkCenterId" serializeAs="String">
         <value>300000003822435</value>
       </setting>
       <setting name="RollToPrint" serializeAs="String">
@@ -59,6 +59,9 @@
       </setting>
       <setting name="PalletToPrint" serializeAs="String">
         <value>3</value>
+      </setting>
+      <setting name="ResourceId" serializeAs="String">
+        <value>300000003822457</value>
       </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
