Cambios de ambientes
OK

--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -63,6 +63,9 @@
       <setting name="ResourceId" serializeAs="String">
         <value>300000003822457</value>
       </setting>
+      <setting name="Environment" serializeAs="String">
+        <value>0</value>
+      </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
 </configuration>
