--- a/WOW-Fusion/Properties/Settings.settings
+++ b/WOW-Fusion/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="ResourceId" Type="System.String" Scope="User">
       <Value Profile="(Default)">300000003822457</Value>
     </Setting>
+    <Setting Name="Environment" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
