--- a/WOW-Fusion/App.config
+++ b/WOW-Fusion/App.config
@@ -60,11 +60,20 @@
       <setting name="PalletToPrint" serializeAs="String">
         <value>3</value>
       </setting>
-      <setting name="ResourceId" serializeAs="String">
+      <setting name="ResourceId2" serializeAs="String">
         <value>300000003822457</value>
       </setting>
       <setting name="Environment" serializeAs="String">
         <value>0</value>
+      </setting>
+      <setting name="ResourceId3" serializeAs="String">
+        <value>300000003969053</value>
+      </setting>
+      <setting name="BagToPrint" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="WeightStdP3" serializeAs="String">
+        <value>100</value>
       </setting>
     </WOW_Fusion.Properties.Settings>
   </userSettings>
